# AlgoritmosGeometricosUJA

./: .gitignore  .gitmodules  README.md  vcpkg_install.bat  vcpkg_libraries.bat
clion/: CMakeLists.txt  prepare-release.bat
clion_linux/: CMakeLists.txt  install_libraries.sh  prepare-debug.bat  prepare-debug.sh  prepare-release.sh
clion_linux/Rendering/: Model3D.cpp
python/: .gitignore
python/clion_updater/: cmake_list_sources.py  update_source_files.py
vs/Source/: AG2223.vcxproj
vs/Source/Libraries/imguifiledialog/: ImGuiFileDialog.h
vs/Source/Rendering/: GUI.cpp  Model3D.h  SceneContent.cpp
